build.yml: Make run continue even on failure

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
           
   windows:
     name: Windows
+    continue-on-error: true
     runs-on: self-windows
     defaults:
       run:
